# trading-agent

./: .gitignore  inject_event.py  main.py  pyproject.toml
agent/: classifier_eval.py  context.py  eval_runner.py  exit_ladder.py  heartbeat.py  orchestrator.py  pnl_attribution.py  policy.py  registry.py  skill.py
agent/replay/: __init__.py  capture.py  gateway.py  recorded_llm.py  runner.py
agent/traders/: profile.py  registry.py
bridge/: Package.swift
config/: policy.yaml
config/traders/: mystic.yaml  pup-danny.yaml  stocktalkweekly.yaml  urkel.yaml  wallstengine.yaml
docs/: runbook-daily-startup.md
docs/ops/: discord-extension-setup.md
extension/: content.js  extract.js  manifest.json
extension/test/: capture_resilience.test.js  harness.html
infra/bridge_client/: discord_extension_forwarder.py  notification_poller.py  socket_reader.py
infra/ib/: gateway.py  models.py
infra/launchd/: com.jasonli.trading-agent.plist  com.jasonli.trading-bridge.plist  com.jasonli.trading-extension-forwarder.plist  com.jasonli.trading-watchdog.plist
infra/llm/: classifier_client.py
infra/storage/: classification_log_store.py  db.py  examples_pending_store.py  execution_store.py  idempotency_store.py  position_exit_store.py  signal_store.py  trace_store.py  trade_intent_store.py  trader_state_store.py  trim_ladder_store.py
infra/telegram/: client.py
skills/execution/: _options_leg.py  _pricing.py  chain_lookup.py  channel_policy_guard.py  contract_selector.py  cooldown_guard.py  equity_contract_builder.py  execution_audit_writer.py  (+17 more)
tests/: conftest.py
(+190 files in other folders)
