[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "ib_insync>=0.9.86",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
include = ["agent*", "infra*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
